CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(MPCNEW)
FIND_PACKAGE(yaml-cpp CONFIG REQUIRED)
INCLUDE_DIRECTORIES(./include /usr/local/include/yaml-cpp)
if(NEW_YAMLCPP_FOUND)
	ADD_DEFINITIONSY(-DHAVE_NEW_YAMLCPP)
endif(NEW_YAMLCPP_FOUND)
FIND_PACKAGE(OsqpEigen REQUIRED)
FIND_PACKAGE(osqp REQUIRED)
FIND_PACKAGE(Eigen3 3.4 REQUIRED NO_MODULE)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
LINK_DIRECTORIES(/usr/local/lib/ ./lib/)

FILE(GLOB SOURCE_LIST "./src/*.cpp")
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
ADD_EXECUTABLE(${PROJECT_NAME} main.cpp ${SOURCE_LIST})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} yaml-cpp.so osqp::osqpstatic OsqpEigen::OsqpEigen Eigen3::Eigen)